[gd_scene load_steps=16 format=3 uid="uid://br5jh3sh28ig4"]

[ext_resource type="Texture2D" uid="uid://ddmrcvq0prt24" path="res://Images/Backgrounds/Tlov1.png" id="1_5tq1h"]
[ext_resource type="Texture2D" uid="uid://ch30i3jkm2643" path="res://Images/Accessories/Drapak3.png" id="2_rsjqa"]
[ext_resource type="Texture2D" uid="uid://l6wdj1q4e36q" path="res://Images/UI/Prawypanel.png" id="3_p1fni"]
[ext_resource type="Texture2D" uid="uid://cjcm8dskr3xnv" path="res://Images/UI/Currency.png" id="4_omybp"]
[ext_resource type="Texture2D" uid="uid://b417hifsytge3" path="res://Images/Accessories/Miska.png" id="5_qahp6"]
[ext_resource type="Script" path="res://Scripts/CatNeeds/Necessity.gd" id="6_1vdjr"]
[ext_resource type="Texture2D" uid="uid://bcghi5003ch4b" path="res://Images/UI/Necessity.png" id="7_0qgfc"]
[ext_resource type="Texture2D" uid="uid://ckfgt3ibsoco4" path="res://Images/UI/Under.png" id="8_ic1ir"]
[ext_resource type="Texture2D" uid="uid://c4oxc1n8q8k35" path="res://Images/UI/Progress.png" id="9_mdr1f"]
[ext_resource type="Texture2D" uid="uid://dl8dw08og2gr8" path="res://Images/Backgrounds/Placeholder_backgorund_minigames.jpg" id="10_1xqql"]
[ext_resource type="Script" path="res://Scripts/Minigames/MinigamesPanel.gd" id="10_j240k"]
[ext_resource type="Script" path="res://Scripts/Minigames/MinigameButton.gd" id="11_37ado"]
[ext_resource type="Script" path="res://Scripts/Items/Bowl.gd" id="13_gxamd"]
[ext_resource type="Script" path="res://Scripts/Items/Scratching_post.gd" id="14_7xxgu"]

[sub_resource type="LabelSettings" id="LabelSettings_03gin"]
font_size = 250

[node name="MainRoom" type="Node2D"]

[node name="Level" type="Node2D" parent="."]
position = Vector2(934, 11)
scale = Vector2(0.190099, 0.190099)

[node name="Scene" type="Node2D" parent="."]

[node name="Background" type="Sprite2D" parent="Scene"]
position = Vector2(577, 322)
texture = ExtResource("1_5tq1h")

[node name="Cat" type="Node2D" parent="."]

[node name="Sprite2D" type="Sprite2D" parent="Cat"]

[node name="Currency" type="Node2D" parent="."]
position = Vector2(1074, 45.1406)
scale = Vector2(0.190099, 0.190099)

[node name="CurrencyBackground" type="Sprite2D" parent="Currency"]
texture = ExtResource("3_p1fni")

[node name="CurrencyIcon" type="Sprite2D" parent="Currency"]
position = Vector2(210.417, -6.00017)
scale = Vector2(0.886122, 0.886122)
texture = ExtResource("4_omybp")

[node name="Money" type="Label" parent="Currency"]
offset_left = -736.459
offset_top = -179.594
offset_right = 31.5413
offset_bottom = 162.406
text = "10000"
label_settings = SubResource("LabelSettings_03gin")

[node name="Necessities" type="Node2D" parent="."]
position = Vector2(376, 48)
scale = Vector2(0.249311, 0.249311)
script = ExtResource("6_1vdjr")

[node name="Timer" type="Timer" parent="Necessities"]

[node name="Hungry" type="Node2D" parent="Necessities"]

[node name="Necessity" type="Sprite2D" parent="Necessities/Hungry"]
texture = ExtResource("7_0qgfc")

[node name="TextureProgressBar" type="TextureProgressBar" parent="Necessities/Hungry"]
offset_left = -168.464
offset_top = -164.453
offset_right = 172.536
offset_bottom = 176.547
allow_greater = true
allow_lesser = true
fill_mode = 2
nine_patch_stretch = true
texture_under = ExtResource("8_ic1ir")
texture_progress = ExtResource("9_mdr1f")

[node name="Play" type="Node2D" parent="Necessities"]
position = Vector2(409.128, 0)

[node name="Necessity" type="Sprite2D" parent="Necessities/Play"]
texture = ExtResource("7_0qgfc")

[node name="TextureProgressBar" type="TextureProgressBar" parent="Necessities/Play"]
offset_left = -168.464
offset_top = -164.453
offset_right = 172.536
offset_bottom = 176.547
allow_greater = true
allow_lesser = true
fill_mode = 2
nine_patch_stretch = true
texture_under = ExtResource("8_ic1ir")
texture_progress = ExtResource("9_mdr1f")

[node name="Scratch" type="Node2D" parent="Necessities"]
position = Vector2(810.233, 0)

[node name="Necessity" type="Sprite2D" parent="Necessities/Scratch"]
texture = ExtResource("7_0qgfc")

[node name="TextureProgressBar" type="TextureProgressBar" parent="Necessities/Scratch"]
offset_left = -168.464
offset_top = -164.453
offset_right = 172.536
offset_bottom = 176.547
allow_greater = true
allow_lesser = true
fill_mode = 2
nine_patch_stretch = true
texture_under = ExtResource("8_ic1ir")
texture_progress = ExtResource("9_mdr1f")

[node name="Sleep" type="Node2D" parent="Necessities"]
position = Vector2(1223.37, 0)

[node name="Necessity" type="Sprite2D" parent="Necessities/Sleep"]
texture = ExtResource("7_0qgfc")

[node name="TextureProgressBar" type="TextureProgressBar" parent="Necessities/Sleep"]
offset_left = -168.464
offset_top = -164.453
offset_right = 172.536
offset_bottom = 176.547
allow_greater = true
allow_lesser = true
fill_mode = 2
nine_patch_stretch = true
texture_under = ExtResource("8_ic1ir")
texture_progress = ExtResource("9_mdr1f")

[node name="Cleanliness" type="Node2D" parent="Necessities"]
position = Vector2(1628.49, 0)

[node name="Necessity" type="Sprite2D" parent="Necessities/Cleanliness"]
texture = ExtResource("7_0qgfc")

[node name="TextureProgressBar" type="TextureProgressBar" parent="Necessities/Cleanliness"]
offset_left = -168.464
offset_top = -164.453
offset_right = 172.536
offset_bottom = 176.547
allow_greater = true
allow_lesser = true
fill_mode = 2
nine_patch_stretch = true
texture_under = ExtResource("8_ic1ir")
texture_progress = ExtResource("9_mdr1f")

[node name="MinigamesPanel" type="Node2D" parent="."]
position = Vector2(581, 324)
script = ExtResource("10_j240k")

[node name="Sprite2D" type="Sprite2D" parent="MinigamesPanel"]
modulate = Color(1, 1, 1, 0.392157)
texture = ExtResource("10_1xqql")

[node name="WalkToTarget" type="Node2D" parent="MinigamesPanel"]

[node name="WalkToTargetLabel" type="Label" parent="MinigamesPanel/WalkToTarget"]
offset_left = -338.0
offset_top = -217.0
offset_right = -298.0
offset_bottom = -194.0
scale = Vector2(0.99523, 1.03372)
theme_override_font_sizes/font_size = 42
text = "Dojdź do celu"

[node name="WalkToTargetButton" type="Button" parent="MinigamesPanel/WalkToTarget"]
offset_left = 257.0
offset_top = -212.0
offset_right = 325.0
offset_bottom = -162.0
theme_override_font_sizes/font_size = 30
text = "Graj"

[node name="CatHop" type="Node2D" parent="MinigamesPanel"]

[node name="CatHopLabel" type="Label" parent="MinigamesPanel/CatHop"]
offset_left = -338.0
offset_top = -147.0
offset_right = -65.0
offset_bottom = -89.0
scale = Vector2(0.99523, 1.03372)
theme_override_font_sizes/font_size = 42
text = "CatHop
"

[node name="CatHopButton" type="Button" parent="MinigamesPanel/CatHop"]
offset_left = 257.0
offset_top = -153.0
offset_right = 325.0
offset_bottom = -103.0
theme_override_font_sizes/font_size = 30
text = "Graj"

[node name="MinigameButton" type="Node2D" parent="."]
position = Vector2(1100, 596)
script = ExtResource("11_37ado")

[node name="Button" type="Button" parent="MinigameButton"]
offset_left = -31.0
offset_top = -30.0
offset_right = 41.0
offset_bottom = 42.0

[node name="Bowl" type="Area2D" parent="."]
script = ExtResource("13_gxamd")

[node name="Miska" type="Sprite2D" parent="Bowl"]
self_modulate = Color(0.99558, 0.99558, 0.99558, 1)
position = Vector2(214, 477)
scale = Vector2(0.0879788, 0.0879788)
texture = ExtResource("5_qahp6")

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Bowl"]
visible = false
polygon = PackedVector2Array(172, 454, 185, 447, 212, 443, 236, 444, 254, 451, 260, 458, 265, 478, 268, 488, 267, 495, 258, 501, 245, 506, 212, 509, 180, 504, 165, 496, 163, 486)

[node name="Fridge" type="Node2D" parent="."]
visible = false

[node name="Fridge" type="Sprite2D" parent="Fridge"]
modulate = Color(1, 1, 1, 0.392157)
position = Vector2(564, 333)
texture = ExtResource("10_1xqql")

[node name="BackButton" type="Button" parent="Fridge"]
offset_left = 843.0
offset_top = 93.0
offset_right = 925.0
offset_bottom = 130.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
text = "POWRÓT"

[node name="Scratching_post" type="Area2D" parent="."]
script = ExtResource("14_7xxgu")

[node name="Sprite" type="Sprite2D" parent="Scratching_post"]
position = Vector2(1016, 342)
scale = Vector2(0.1998, 0.1998)
texture = ExtResource("2_rsjqa")

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Scratching_post"]
polygon = PackedVector2Array(919, 245, 932, 226, 965, 216, 1004, 218, 1033, 230, 1039, 246, 1035, 261, 1035, 270, 1019, 281, 995, 286, 994, 454, 1024, 454, 1023, 407, 1025, 393, 1044, 380, 1074, 374, 1098, 376, 1117, 386, 1125, 400, 1124, 411, 1126, 410, 1125, 457, 1135, 468, 1137, 480, 1135, 489, 1127, 498, 1114, 506, 1091, 512, 1061, 513, 913, 513, 912, 503, 939, 455, 961, 455, 962, 284, 939, 279, 924, 269, 923, 262)

[connection signal="timeout" from="Necessities/Timer" to="Necessities" method="_on_timer_timeout"]
[connection signal="pressed" from="MinigamesPanel/WalkToTarget/WalkToTargetButton" to="MinigamesPanel" method="_on_walk_to_target_button_pressed"]
[connection signal="pressed" from="MinigamesPanel/CatHop/CatHopButton" to="MinigamesPanel" method="_on_cat_hop_button_pressed"]
[connection signal="pressed" from="MinigameButton/Button" to="MinigameButton" method="_on_button_pressed"]
[connection signal="input_event" from="Bowl" to="Bowl" method="_on_input_event"]
[connection signal="mouse_entered" from="Bowl" to="Bowl" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="Bowl" to="Bowl" method="_on_mouse_exited"]
[connection signal="pressed" from="Fridge/BackButton" to="Bowl" method="_on_back_button_pressed"]
[connection signal="input_event" from="Scratching_post" to="Scratching_post" method="_on_input_event"]
[connection signal="mouse_entered" from="Scratching_post" to="Scratching_post" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="Scratching_post" to="Scratching_post" method="_on_mouse_exited"]
